# quick-start-seckilling

./: pyproject.toml
seckilling/: __init__.py  alembic.ini  app.py  conn.py  lock.py  models.py  settings.py  status.py  storage.py
seckilling/mg/: __init__.py  order_consume.py  order_produce.py  overtime_consume.py  overtime_produce.py  paid_consume.py  paid_produce.py  utils.py
seckilling/mg/test_queue/: __init__.py  order_consume.py  order_produce.py
seckilling/migrations/: env.py
seckilling/migrations/versions/: 00_742f81ba52e2_init.py  01_b9c4a1c19a0e_add_status_for_order_history.py  03_f83467c792e1_add_table_storage.py  fa902b68342a_add_default_value.py
