[tool.poetry]
name = "seckilling"
version = "0.1.0"
description = ""
authors = ["mkdir700 <mkdir700@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"
redis = "^4.3.4"
pymysql = "^1.0.2"
dbutils = "^3.0.2"
pika = "^1.3.1"
cryptography = "^38.0.3"
sqlmodel = "^0.0.8"
alembic = "^1.8.1"
pydantic = "^1.10.2"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
